# PickReversi

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  gmon.out
doc/: Pattern.xlsx  build.md
resource/bench/: after_hash.csv  after_ordering.csv  alpha_beta.csv  before_hash.csv  before_ordering.csv  bench_case.txt  bench_case_hash.txt  minmax.csv
resource/test/: search_test.txt  search_test_source.txt
src/: CMakeLists.txt  const.h  define.h  main.cpp  type.h
src/bench/: bench_result.cpp  bench_result.h  benchmark.cpp
src/board/: bit.cpp  bit.h  board.cpp  board.h  stone.cpp  stone.h
src/game/: ai_player.cpp  ai_player.h  buffer_sink.h  console_player.cpp  console_player.h  game.cpp  game.h  gmon.out  logger.cpp  logger.h  player.cpp  player.h  record.cpp  record.h
src/record/: record.cpp  record.h
src/solver/: hash.cpp  hash.h  hash_table.cpp  hash_table.h  movelist.cpp  movelist.h  search.cpp  search.h  search_base.cpp  search_end.cpp  search_mid.cpp  search_option.h  search_result.cpp  search_result.h
src/solver/eval/: evaluator.cpp  evaluator.h  pattern.h  pattern_eval.cpp  pattern_eval.h  pattern_formatter.h  pos2pattern.h  pos_eval.cpp  pos_eval.h
src/solver/train/: batch_data.cpp  batch_data.h  pattern_trainer.cpp  pattern_trainer.h  record_batcher.cpp  record_batcher.h  train.cpp  train_const.h
src/util/: color_helper.cpp  color_helper.h  position_helper.cpp  position_helper.h  stack.h  storage.h
test/: CMakeLists.txt  board_test.cpp  dummy.cpp
test/solver/: search_test.cpp
test/solver/eval/: pattern_formatter_test.cpp  pattern_test.cpp  pos_eval_test.cpp
